Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111439

qmlsc: Cannot compile function if this is passed as an argument to another

    XMLWordPrintable

Details

    • Linux/X11
    • 365b78159 (dev)

    Description

      Warning: main.qml:5:5: Could not compile function test_warn1: Instruction "generate_ConvertThisToObject" not implemented [compiler]
          function test_warn1() {
          ^^^^^^^^^
      
      import QtQuick
      Item {
          function f(arg:Item) {}
          function warn() {
              f(this)
          }
      }
      

      Attachments

        For Gerrit Dashboard: QTBUG-111439
        # Subject Branch Project Status CR V

        Activity

          People

            ulherman Ulf Hermann
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes