tests/auto/qml/qmlcppcodegen/data/thisObject.qml
@@ -1,0 +1,11 @@
+pragma Strict
+import QtQml
+
+QtObject {
+    property QtObject warned
+
+    function f(arg: QtObject) { warned = arg }
+    function warn() { f(this) }
+
+    Component.onCompleted: warn()
+}
